X-challenge login and register frontend changes

--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -39,6 +39,7 @@
                         {% if is_granted('ROLE_MASTER') %}
                         <li><a href={{ path('all_question_list') }}>Intrebari</a></li>
                         {% endif %}
+                        <li><a href="#">Teste</a></li>
                         <li><a href="#">Clasament</a></li>
                     </ul>
                     <form role="search" class="navbar-form navbar-left">
