--- a/src/AppBundle/Resources/views/Security/login.html.twig
+++ b/src/AppBundle/Resources/views/Security/login.html.twig
@@ -15,7 +15,7 @@
 {% block body %}
     <div class="login-box">
         <div class="login-logo">
-            <a href="../../index2.html"><b>Admin</b>LTE</a>
+            <b>X</b>-Challenge
         </div><!-- /.login-logo -->
         {% if error %}
             <div>{{ error }}</div>
@@ -42,12 +42,6 @@
                     </div><!-- /.col -->
                 </div>
             </form>
-
-            <div class="social-auth-links text-center">
-                <p>- OR -</p>
-                <a href="#" class="btn btn-block btn-social btn-facebook btn-flat"><i class="fa fa-facebook"></i> Sign in using Facebook</a>
-                <a href="#" class="btn btn-block btn-social btn-google btn-flat"><i class="fa fa-google-plus"></i> Sign in using Google+</a>
-            </div><!-- /.social-auth-links -->
 
             <a href="#">I forgot my password</a><br>
             <a href="{{ path('register') }}" class="text-center">Register a new membership</a>
