--- a/src/AppBundle/Resources/views/javascript.html.twig
+++ b/src/AppBundle/Resources/views/javascript.html.twig
@@ -8,6 +8,8 @@
 
 <script src="/bundles/app/theme/dist/js/app.js"></script>
 
+<script src="/bundles/app/components/toastr/toastr.min.js"></script>
+
 <script src="/bundles/app/js/core.js"></script>
 
 <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
