--- a/src/AppBundle/Resources/views/stylesheet.html.twig
+++ b/src/AppBundle/Resources/views/stylesheet.html.twig
@@ -8,3 +8,5 @@
 <link rel="stylesheet" href="/bundles/app/theme/dist/css/AdminLTE.min.css">
 <!-- iCheck -->
 <link rel="stylesheet" href="/bundles/app/theme/plugins/iCheck/square/blue.css">
+
+<link rel="stylesheet" href="/bundles/app/components/toastr/toastr.min.css">
