--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -60,13 +60,13 @@
                                 <span class="label label-warning">1</span>
                             </a>
                             <ul class="dropdown-menu">
-                                <li class="header">You have 1 notification</li>
+                                <li class="header">Ai o notificare</li>
                                 <li>
                                     <!-- Inner Menu: contains the notifications -->
                                     <div class="slimScrollDiv" style="position: relative; overflow: hidden; width: auto; height: 200px;"><ul class="menu" style="overflow: hidden; width: 100%; height: 200px;">
                                             <li><!-- start notification -->
                                                 <a href="#">
-                                                    <i class="fa fa-child"></i>Felicitari! Esti pe locul 55/234!
+                                                    <i class="fa fa-child"></i>Luiza te-a provocat sa raspunzi la o provocare!
                                                 </a>
                                             </li>
                                             <!-- end notification -->
@@ -122,5 +122,6 @@
     {% block javascript %}
     {% endblock %}
 </script>
+
 </body>
 </html>
