--- a/src/AppBundle/Resources/views/Question/edit.html.twig
+++ b/src/AppBundle/Resources/views/Question/edit.html.twig
@@ -7,6 +7,9 @@
             <div class="box-header with-border">
                 <h3 class="box-title">{{ title }}</h3>
             </div>
+            {% if error %}
+                {{ toastr("error", "Adaugare intrebare", error) }}
+            {% endif %}
             <!-- /.box-header -->
             <!-- form start -->
             {{ form_start(form, { 'attr': {'class': 'form-horizontal', 'id': 'addQuest'} }) }}
@@ -62,10 +65,36 @@
                         </div>
                     </div>
                 </div>
+                <div class="form-group hidden">
+                    {{ form_label(form.answer4) }}
+                    <div class="col-sm-10">
+                        <div class="row">
+                            <div class="col-sm-11">
+                                {{ form_widget(form.answer4) }}
+                            </div>
+                            <div class="col-sm-1 checkbox icheck">
+                                {{ form_widget(form.check4) }}
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="form-group hidden">
+                    {{ form_label(form.answer5) }}
+                    <div class="col-sm-10">
+                        <div class="row">
+                            <div class="col-sm-11">
+                                {{ form_widget(form.answer5) }}
+                            </div>
+                            <div class="col-sm-1 checkbox icheck">
+                                {{ form_widget(form.check5) }}
+                            </div>
+                        </div>
+                    </div>
+                </div>
                 <div class="form-group">
                     <div class="col-sm-1"></div>
                     <div class="col-sm-10">
-                        <a href="" class="btn btn-xs btn-default pull-right">Adauga raspuns</a>
+                        <a onclick="addAnswer()" title="Puteti adauga un numar maxim de 5 raspunsuri" class="btn btn-xs btn-default pull-right">Adauga raspuns</a>
                     </div>
                 </div>
             </div>
@@ -98,4 +127,19 @@
         });
         addQuest.submit();
     }
+    function addAnswer() {
+        $('div.form-group').each(function() {
+            if ($(this).hasClass("hidden")) {
+                $(this).removeClass("hidden");
+                return false;
+            }
+        });
+    }
+    $(document).ready(function(){
+        $('div.form-group').each(function() {
+            if ($(this).find("textarea").text() != "" && $(this).hasClass("hidden")) {
+                $(this).removeClass("hidden");
+            }
+        });
+    });
 {% endblock %}
