--- a/src/AppBundle/Resources/views/Question/listQuestions.html.twig
+++ b/src/AppBundle/Resources/views/Question/listQuestions.html.twig
@@ -1,5 +1,8 @@
 {% extends "::base.html.twig" %}
 {% block content %}
+    {% if app.session.flashbag.has('success') %}
+        {{ toastr("success", "Adaugare intrebare", app.session.flashbag.get('success').0) }}
+    {% endif %}
     <a class="btn btn-primary pull-right" href="{{ path('question_edit', {'cid':category.id, 'id': -1}) }}">Adauga o intrebare</a>
     <table class="table table-hover category-table">
         {% for quest in questions %}
@@ -13,15 +16,15 @@
 {% endblock %}
 {% block javascript %}
     function editQ(category, id) {
-    var red = "{{ path('question_edit', {'cid': 'categ', 'id':'qid'}) }}";
-    red = red.replace('categ', category);
-    red = red.replace('qid', id);
-    window.location.href = red;
+        var red = "{{ path('question_edit', {'cid': 'categ', 'id':'qid'}) }}";
+        red = red.replace('categ', category);
+        red = red.replace('qid', id);
+        window.location.href = red;
     }
     function deleteQ(category, id) {
-    var red = "{{ path('delete_question', {'cid': 'categ', 'id':'qid'}) }}";
-    red = red.replace('categ', category);
-    red = red.replace('qid', id);
-    window.location.href = red;
+        var red = "{{ path('delete_question', {'cid': 'categ', 'id':'qid'}) }}";
+        red = red.replace('categ', category);
+        red = red.replace('qid', id);
+        window.location.href = red;
     }
 {% endblock %}
