--- a/src/AppBundle/Resources/views/Registration/register.html.twig
+++ b/src/AppBundle/Resources/views/Registration/register.html.twig
@@ -43,7 +43,7 @@
             <div class="row">
 
                 <div class="col-xs-4">
-                    <button type="submit" class="btn btn-primary btn-block btn-flat">Inregistreaza</button>
+                    <button type="submit" class="btn btn-primary">Inregistreaza</button>
                 </div><!-- /.col -->
             </div>
         {{ form_end(form) }}
