--- a/src/AppBundle/Resources/views/javascript.html.twig
+++ b/src/AppBundle/Resources/views/javascript.html.twig
@@ -12,6 +12,7 @@
 
 <script src="/bundles/app/js/core.js"></script>
 
+<script src="https://cdnjs.cloudflare.com/ajax/libs/bootbox.js/4.4.0/bootbox.min.js"></script>
 <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
 <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
 <!--[if lt IE 9]>
