--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -26,7 +26,7 @@
         <nav class="navbar navbar-static-top">
             <div class="container">
                 <div class="navbar-header">
-                    <a class="navbar-brand" href={{ path("default") }}><b>X</b>-Challenge</a>
+                    <a class="navbar-brand" href={{ path("home") }}><b>X</b>-Challenge</a>
                     <button data-target="#navbar-collapse" data-toggle="collapse" class="navbar-toggle collapsed" type="button">
                         <i class="fa fa-bars"></i>
                     </button>
