--- a/src/AppBundle/Resources/views/Category/listCategories.html.twig
+++ b/src/AppBundle/Resources/views/Category/listCategories.html.twig
@@ -1,26 +1,18 @@
 {% extends "::base.html.twig" %}
 {% block content %}
-<table class="table table-hover category-table">
+    <div class="container bs-docs-container">
+        <div class="bs-docs-section">
     {% for categ in categories %}
-        <tr>
-            <th>{{ loop.index }}. {{ categ.name }}</th>
-            {% if is_granted('ROLE_MASTER') %}
-            <td onclick = "questionList({{ categ.id }})" class="btn btn-primary btn-table">Intrebari</td>
-            {% endif %}
-            <td onclick ="testList({{ categ.id }})" class="btn btn-primary btn-table">Teste</td>
-        </tr>
+        <div id="callout-navbar-breakpoint" class="bs-callout bs-callout-info" style="background-color: white">
+            <h4>{{ categ.name }}</h4>
+            <p>
+                {% if is_granted('ROLE_MASTER') %}
+                    <a  href="{{ path('question_list',{'cid':'categ'}) }}" class="btn btn-primary">Intrebari</a>
+                {% endif %}
+                <a href="{{ path('test_list',{'cid':'categ'}) }}" class="btn btn-primary">Teste</a>
+            </p>
+        </div>
     {% endfor %}
-</table>
-{% endblock %}
-{% block javascript %}
-    function questionList(category) {
-        var red = "{{ path('question_list',{'cid':'categ'}) }}";
-        red = red.replace('categ', category);
-        window.location.href = red;
-    }
-    function testList(category) {
-        var red = "{{ path('test_list',{'cid':'categ'}) }}";
-        red = red.replace('categ', category);
-        window.location.href = red;
-    }
+        </div>
+    </div>
 {% endblock %}
