--- a/src/AppBundle/Resources/views/stylesheet.html.twig
+++ b/src/AppBundle/Resources/views/stylesheet.html.twig
@@ -1,5 +1,6 @@
 <!-- Bootstrap 3.3.5 -->
 <link rel="stylesheet" href="/bundles/app/theme/bootstrap/css/bootstrap.css">
+<link rel="stylesheet" href="/bundles/app/css/docs.min.css"
 <!-- Font Awesome -->
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
 <!-- Ionicons -->
