Added logic for generating and showing tests

--- a/src/AppBundle/Resources/views/Category/listCategories.html.twig
+++ b/src/AppBundle/Resources/views/Category/listCategories.html.twig
@@ -9,7 +9,7 @@
                 {% if is_granted('ROLE_MASTER') %}
                     <a  href="{{ path('question_list',{'cid': categ.id}) }}" class="btn btn-primary">Intrebari</a>
                 {% endif %}
-                <a href="{{ path('test_list',{'cid':'categ'}) }}" class="btn btn-primary">Teste</a>
+                <a href="{{ path('test_list',{'cid': categ.id}) }}" class="btn btn-primary">Teste</a>
             </p>
         </div>
     {% endfor %}
