see & edit profile, base modifications & scores

--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -92,8 +92,8 @@
                                 {% endif %}
                             </a>
                                 <!-- Menu Footer-->
-                        <li><a href="#"><i class="fa fa-user"> </i> Profile</a></li>
-                        <li><a href={{ path("security_logout") }}><i class="fa fa-sign-out"></i> Sign out</a></li>
+                        <li><a href="{{ path("profile", {'id' : app.user.id}) }}"><i class="fa fa-user"> </i> Profile</a></li>
+                        <li><a href= "{{ path("security_logout") }}"><i class="fa fa-sign-out"></i> Sign out</a></li>
                     </ul>
                 </div>
                 <!-- /.navbar-custom-menu -->
